[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/ui/intergrated_ui/result_menu.gd" type="Script" id=2]

[node name="result_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
mainMenuPath = "res://src/ui/separate_ui/main_menu.tscn"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.156863, 0.156863, 0.588235 )

[node name="ResultText" type="Label" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "_result_text_placeholder"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_constants/separation = 40
alignment = 1

[node name="ResetLeverBtn" type="Button" parent="HBoxContainer"]
margin_left = 346.0
margin_right = 536.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Restart Loop"

[node name="NextLoopBtn" type="Button" parent="HBoxContainer"]
margin_left = 576.0
margin_right = 731.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Next Loop"

[node name="MainMenuBtn" type="Button" parent="HBoxContainer"]
margin_left = 771.0
margin_right = 934.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="HBoxContainer/ResetLeverBtn" to="." method="_on_ResetLeverBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/NextLoopBtn" to="." method="_on_NextLoopBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
